--- a/atividade.html
+++ b/atividade.html
@@ -8,7 +8,7 @@
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
-      background-image: url('https://cmsnews.dix.digital/storage/contents/66ab923bc3df8.webp');
+      background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Flag_of_Argentina_and_Brazil.svg/2560px-Flag_of_Argentina_and_Brazil.svg.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -58,8 +58,8 @@
     }
 
     .galeria img {
-      width: 250px;
-      height: 170px;
+      width: 350px;
+      height: 270px;
       object-fit: cover;
       border-radius: 10px;
       box-shadow: 0 0 8px rgba(255, 255, 255, 0.3);
